--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     margin-bottom: 15px;
     background-color: #fff;
     border-radius: 4px;
+    text-align: left;
 }
 
 .question p {
@@ -32,7 +33,6 @@ body {
 }
 
 .question label {
-    display: block;
     margin-bottom: 10px;
 }
 
